<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_name"
                android:textSize="16sp"
                android:id="@+id/textProductName"
                android:textColor="#000000"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product_price"
                        android:textColor="@color/colorPrimary"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product_cost"
                        android:layout_marginLeft="6dp"
                        android:id="@+id/textCost"/>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product_quantity_"
                        android:textColor="@color/colorPrimary"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textQuantity"
                        android:text="@string/product_quantity"
                        android:layout_marginLeft="6dp"
                        />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
        <RelativeLayout
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center|right"
            android:layout_marginRight="16dp"
             >

            <ImageView
                android:id="@+id/quantity_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center|right"
                android:src="@drawable/buquantity" />

            <ImageView
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:layout_gravity="center|right"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_shopping_cart_black_24dp" />
        </RelativeLayout>


    </android.support.v7.widget.CardView>

</RelativeLayout>